ingress/configs/mediawiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediawiki-ingress
  namespace: unvt-mediawiki
spec:
  ingressClassName: nginx
  rules:
    - host: mediawiki.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mediawiki-service
                port:
                  number: 80
    - host: mediawiki.unvt.ch
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mediawiki-service
                port:
                  number: 80
